--- a/class-01-jquery-and-the-dom/pair-assignment/danpair/index.html
+++ b/class-01-jquery-and-the-dom/pair-assignment/danpair/index.html
@@ -40,7 +40,8 @@
     <footer>
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
-
-    <!-- // TODO: Include any/all needed script tags -->
+    <script src= 'https://code.jquery.com/jquery-2.1.4.js'> </script>
+    <script src = 'scripts/blogArticles.js'> </script>
+    <script src = 'scripts/article.js'> </script>
   </body>
 </html>
