--- a/class-04-templates/pair-assignment/starter-code/index.html
+++ b/class-04-templates/pair-assignment/starter-code/index.html
@@ -9,13 +9,26 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
-
+    
+    <script id="articleHB" type="text/x-handlebars-template">
+      <article class='clearfix' data-author= '{{author}}'
+        data-category='{{category}}'>
+          <header>
+            <h1>{{title}}</h1>
+            <div class="byline">
+              By <address><a href='{{authorUrl}}'>{{author}}</a></address>
+            </div>
+          </header>
+          <section class="article-body">{{{body}}}</section>
+          <a href="#" class="read-on">Read on &rarr;</a>
+        </article>
+      </script>
     <!--
       TODO: Add a script tag to hold the Handlebars template.
         - Be sure to give it a meaningful id attribute.
         - Move your old template structure to here.
         - Insert placeholder keys.
-        - If your object doesn't have values you need yet, you can add those properties in the model.
+        - If your object doesnt have values you need yet, you can add those properties in the model.
     -->
 
   </head>
@@ -73,9 +86,10 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <!-- TODO: Include Handlebars.JS from a CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.min.js" charset="utf-8"></script>
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
+
   </body>
 </html>
