--- a/class-03-responsive-mobile-first/pair-assignment/starter-code/index.html
+++ b/class-03-responsive-mobile-first/pair-assignment/starter-code/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Blog</title>
+    <meta name = "viewport" content = "width=device-width, initial-scale= 1">
     <!-- TODO: Add a meta tag to properly set the viewport and initial scale -->
     <link rel="stylesheet" href="vendor/styles/normalize.css">
     <link rel="stylesheet" href="styles/icons.css">
@@ -19,6 +20,8 @@
         <h2>The shocking power of static pages</h2>
       </section>
       <nav class="main-nav">
+        <a href = "" class = 'icon-menu'> Menu </a>
+
         <!-- TODO: Add a hamburger menu icon here. -->
         <ul>
           <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
