adding misc files to master branch

--- a/class-04-templates/lecture/examples/03-regex-expression-with-object.html
+++ b/class-04-templates/lecture/examples/03-regex-expression-with-object.html
@@ -7,7 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js" charset="utf-8"></script>
 
   <script id="hello" type="text/template">
-    Hello {{who}}, my name is {{name}}, and I like {{what}}
+    Hello {{who}}, my name is {{name}}, and I like {{where}}
   </script>
 </head>
 <body>
@@ -15,8 +15,8 @@
   <script>
     var data = {
       who: "Students",
-      name: "Ivan",
-      what: "Apples"
+      name: "Dan",
+      where: "Seattle"
     };
     var compile = function(template, expressions) {
       return appTemplate.replace(/{{([A-Za-z]+)}}/g, swapper);
